[package]
name = "hoc"
version = "1.0.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2024"
build = "src/build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hoc"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
badgers = "1.2.0"
bytes = "1.10.1"
config = { version = "0.15.18", features = ["toml"], default-features = false }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
git2 = "0.20.2"
gix-glob = "0.22.1"
jiff = "0.2.15"
mime = "0.3"
number_prefix = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "system-proxy",
  "http2",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6.6", features = [
  "trace",
  "request-id",
  "compression-deflate",
  "compression-gzip",
] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }
urlencoding = "2.1.3"

[build-dependencies]
anyhow = "1.0.100"
ructe = { version = "0.18.2", features = ["mime03"] }
vergen-gix = "1.0.9"

[dev-dependencies]
awc = "3.8.1"
ructe = "0.18.2"
tempfile = "3.23.0"
tokio = "1.48.0"
