[package]
name = "hoc"
version = "1.6.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2024"
build = "src/build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hoc"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
badgers = "2.0.0"
bytes = "1.11.0"
config = { version = "0.15.19", features = ["toml"], default-features = false }
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
git2 = "0.20.2"
gix-glob = "0.22.1"
jiff = "0.2.16"
mime = "0.3.17"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "system-proxy",
  "http2",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6.7", features = [
  "trace",
  "request-id",
  "compression-deflate",
  "compression-gzip",
] }
tracing = "0.1.43"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "env-filter",
] }
unit-prefix = "0.5.2"
urlencoding = "2.1.3"

[build-dependencies]
anyhow = "1.0.100"
ructe = { version = "0.18.2", features = ["mime03"] }
vergen-gix = "1.0.9"

[dev-dependencies]
http-body-util = "0.1.3"
hyper-util = { version = "0.1.18", features = [
  "client",
  "http1",
  "client-legacy",
] }
ructe = "0.18.2"
tempfile = "3.23.0"
tokio = "1.48.0"
