[package]
name = "hoc"
version = "1.11.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hoc"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["macros"] }
badgers = "2.0.0"
bytes = "1.12.0"
config = { version = "0.15.24", features = ["toml"], default-features = false }
crossbeam-queue = "0.3.12"
dashmap = "6.2.1"
dotenvy = "0.15.7"
futures = "0.3.32"
git2 = { version = "0.21.0", features = ["https"] }
gix-glob = "0.26.1"
jiff = "0.2.29"
mime = "0.3.17"
reqwest = { version = "0.13.4", default-features = false, features = [
  "charset",
  "default-tls",
  "http2",
  "system-proxy",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.7.0", features = [
  "trace",
  "request-id",
  "compression-deflate",
  "compression-gzip",
] }
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = [
  "registry",
  "env-filter",
] }
unit-prefix = "0.5.2"
urlencoding = "2.1.3"

[build-dependencies]
anyhow = "1.0.103"
ructe = { version = "0.18.2", features = ["mime03"] }
vergen-gix = "10.0.1"

[dev-dependencies]
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = [
  "client",
  "http1",
  "client-legacy",
] }
ructe = "0.18.2"
tempfile = "3.27.0"
tokio = "1.52.3"
